--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,3 +1,8 @@
 {
-  "presets": ["next/babel"]
+  "presets": [
+    "next/babel"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-do-expressions"
+  ]
 }
