--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,22 @@
     "pm2": "pm2 start npm --name \"next\" -- start"
   },
   "dependencies": {
+    "eslint-config-airbnb": "^18.2.1",
     "next": "12.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.31.0",
+    "recoil": "^0.4.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-do-expressions": "^7.16.0",
     "@types/react": "17.0.33",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "12.0.2",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
