--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "mongoose": "^6.0.12",
+    "morgan": "~1.9.1",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -21,7 +24,9 @@
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
+    "jest": "^27.3.1",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0"
   }
