--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -13,7 +13,8 @@
     "sourceType": "module"
   },
   "plugins": [
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "prettier"
   ],
   "rules": {
     "prettier/prettier": "error",
