--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.16.0",
     "@types/react": "17.0.33",
+    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^7.32.0",
