--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^10.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
@@ -23,8 +24,11 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.6",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^7.32.0",
@@ -34,6 +38,7 @@
     "eslint-plugin-import": "^2.25.2",
     "jest": "^27.3.1",
     "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.11.0"
+    "tsconfig-paths": "^3.11.0",
+    "typescript": "^4.4.4"
   }
 }
