--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["next/babel"],
-  "plugins": ["@babel/plugin-proposal-do-expressions"]
+  "plugins": ["@babel/plugin-proposal-do-expressions", "babel-plugin-styled-components"]
 }
