--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-query": "^3.31.0",
     "recoil": "^0.4.1"
   },
