--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "prettier": "^2.4.1",
     "reflect-metadata": "^0.1.13",
@@ -28,6 +29,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.6",
     "@types/passport": "^1.0.7",
+    "@types/passport-google-oauth": "^1.0.42",
     "@types/passport-jwt": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
