--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "routing-controllers": "^0.9.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
