--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.31.0",
-    "recoil": "^0.4.1",
-    "styled-components": "^5.3.3"
+    "recoil": "^0.4.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.16.0",
     "@types/react": "17.0.33",
-    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^7.32.0",
