--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "pm2": "pm2 restart --name \"next\" -- start"
   },
   "dependencies": {
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "eslint-config-airbnb": "^18.2.1",
     "next": "12.0.2",
     "react": "17.0.2",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.16.0",
+    "@emotion/babel-plugin": "^11.3.0",
     "@types/react": "17.0.33",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
