Chore: typescript 데코레이터 옵션 적용

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "sourceRoot": "./src/bin",
     "strict": true,
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
       "src/*": ["./src/*"]
