--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -25,7 +25,9 @@
         "js": "never",
         "ts": "never"
       }
-    ]
+    ],
+    "no-underscore-dangle":  ["error", { "allow": ["_id"] }],
+    "@typescript-eslint/no-non-null-assertion": "off"
   },
   "settings": {
     "import/resolver": {
