--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -27,7 +27,8 @@
       }
     ],
     "no-underscore-dangle":  ["error", { "allow": ["_id"] }],
-    "@typescript-eslint/no-non-null-assertion": "off"
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "class-methods-use-this": "off"
   },
   "settings": {
     "import/resolver": {
