--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "axios": "^0.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "next": "12.0.2",
     "next-images": "^1.8.2",
