Chore: _id 키값으로 인해 dangling eslint rule off

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -14,6 +14,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
+    "no-underscore-dangle": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
