--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "nanoid": "^3.1.30",
     "passport": "^0.5.0",
+    "passport-github": "^1.1.0",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "prettier": "^2.4.1",
