--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.5.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "aws-sdk": "^2.1025.0",
     "axios": "^0.24.0",
     "eslint-config-airbnb": "^18.2.1",
+    "nanoid": "^3.1.30",
     "next": "12.0.2",
     "next-images": "^1.8.2",
     "prop-types": "^15.7.2",
