--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "~4.16.1",
+    "js-base64": "^3.7.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
