--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -28,7 +28,8 @@
     ],
     "no-underscore-dangle": ["error", { "allow": ["_id", "_json"] }],
     "@typescript-eslint/no-non-null-assertion": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "no-param-reassign": "off"
   },
   "settings": {
     "import/resolver": {
