--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -14,6 +14,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
+    "jsx-a11y/anchor-is-valid": "off",
     "no-underscore-dangle": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
