--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -29,7 +29,12 @@
     "no-underscore-dangle": ["error", { "allow": ["_id", "_json"] }],
     "@typescript-eslint/no-non-null-assertion": "off",
     "class-methods-use-this": "off",
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "@typescript-eslint/ban-types": ["error", {
+      "types": {
+        "Function": false
+      }
+    }]
   },
   "settings": {
     "import/resolver": {
