--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "js-base64": "^3.7.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "mongoose-lean-virtuals": "^0.9.0",
     "morgan": "~1.9.1",
     "nanoid": "^3.1.30",
     "passport": "^0.5.0",
@@ -33,6 +34,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/mongoose-lean-virtuals": "^0.5.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.6",
     "@types/passport": "^1.0.7",
