--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "pm2": "pm2 restart node_modules/.bin/ts-node -- -r tsconfig-paths/register ./src/bin/www.ts"
   },
   "dependencies": {
+    "aws-sdk": "^2.348.0",
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "~1.4.4",
