--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose-lean-virtuals": "^0.9.0",
     "morgan": "~1.9.1",
     "nanoid": "^3.1.30",
+    "nodemailer": "^6.7.1",
     "passport": "^0.5.0",
     "passport-github": "^1.1.0",
     "passport-google-oauth": "^2.0.0",
@@ -38,6 +39,7 @@
     "@types/mongoose-lean-virtuals": "^0.5.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.6",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
     "@types/passport-github": "^1.1.6",
     "@types/passport-google-oauth": "^1.0.42",
