--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "aws-sdk": "^2.1025.0",
     "axios": "^0.24.0",
+    "dompurify": "^2.3.3",
     "nanoid": "^3.1.30",
     "next": "12.0.2",
     "next-images": "^1.8.2",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.16.0",
     "@emotion/babel-plugin": "^11.3.0",
+    "@types/dompurify": "^2.3.1",
     "@types/react": "17.0.33",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
