--- a/backend/package.json
+++ b/backend/package.json
@@ -27,11 +27,13 @@
     "passport-github": "^1.1.0",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
+    "passport-kakao": "^1.0.1",
     "prettier": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0"
   },
   "devDependencies": {
+    "@types/passport-kakao": "^0.2.1",
     "@types/cheerio": "^0.22.30",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
