--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-chartjs-2": "^3.3.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
     "react-query": "^3.31.0",
     "recoil": "^0.4.1"
   },
