--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register --delay 500ms ./src/bin/www.ts --watch",
-    "pm2": "pm2 restart node_modules/.bin/ts-node -- -r tsconfig-paths/register ./src/bin/www.ts"
+    "pm2": "pm2 restart node_modules/.bin/ts-node -- -r tsconfig-paths/register ./src/bin/www.ts",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "aws-sdk": "^2.348.0",
@@ -33,11 +34,11 @@
     "routing-controllers": "^0.9.0"
   },
   "devDependencies": {
-    "@types/passport-kakao": "^0.2.1",
     "@types/cheerio": "^0.22.30",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose-lean-virtuals": "^0.5.2",
     "@types/morgan": "^1.9.3",
@@ -47,6 +48,7 @@
     "@types/passport-github": "^1.1.6",
     "@types/passport-google-oauth": "^1.0.42",
     "@types/passport-jwt": "^3.0.6",
+    "@types/passport-kakao": "^0.2.1",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^7.32.0",
@@ -55,6 +57,8 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
     "jest": "^27.3.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.4"
