--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,8 @@
     "passport-kakao": "^1.0.1",
     "prettier": "^2.4.1",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.9.0"
+    "routing-controllers": "^0.9.0",
+    "supertest": "^6.1.6"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.30",
@@ -49,6 +50,7 @@
     "@types/passport-google-oauth": "^1.0.42",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-kakao": "^0.2.1",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^7.32.0",
@@ -57,7 +59,6 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
     "jest": "^27.3.1",
-    "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
