--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register --delay 500ms ./src/bin/www.ts --watch",
     "pm2": "pm2 restart node_modules/.bin/ts-node -- -r tsconfig-paths/register ./src/bin/www.ts",
-    "test": "jest --coverage"
+    "test": "jest --coverage --detectOpenHandles"
   },
   "dependencies": {
     "aws-sdk": "^2.348.0",
@@ -35,6 +35,7 @@
     "supertest": "^6.1.6"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^2.1.0",
     "@types/cheerio": "^0.22.30",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
