--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register --delay 500ms ./src/bin/www.ts --watch",
     "pm2": "pm2 restart node_modules/.bin/ts-node -- -r tsconfig-paths/register ./src/bin/www.ts",
-    "test": "jest --coverage --detectOpenHandles"
+    "test": "NODE_ENV=test jest --coverage --runInBand --detectOpenHandles --detectLeaks"
   },
   "dependencies": {
     "aws-sdk": "^2.348.0",
@@ -13,12 +13,14 @@
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "D": "^1.0.0",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "~4.16.1",
     "js-base64": "^3.7.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^8.0.3",
     "mongoose": "^6.0.12",
     "mongoose-lean-virtuals": "^0.9.0",
     "morgan": "~1.9.1",
@@ -32,10 +34,10 @@
     "prettier": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "weak-napi": "^2.0.2"
   },
   "devDependencies": {
-    "@shelf/jest-mongodb": "^2.1.0",
     "@types/cheerio": "^0.22.30",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
