--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register --delay 500ms ./src/bin/www.ts --watch",
     "pm2": "pm2 restart node_modules/.bin/ts-node -- -r tsconfig-paths/register ./src/bin/www.ts",
-    "test": "NODE_ENV=test jest --coverage --runInBand --detectOpenHandles --detectLeaks"
+    "test": "NODE_ENV=test node --expose-gc ./node_modules/jest/bin/jest.js --runInBand --logHeapUsage"
   },
   "dependencies": {
     "aws-sdk": "^2.348.0",
@@ -13,14 +13,12 @@
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "D": "^1.0.0",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "~4.16.1",
     "js-base64": "^3.7.2",
     "jsonwebtoken": "^8.5.1",
-    "mongodb-memory-server": "^8.0.3",
     "mongoose": "^6.0.12",
     "mongoose-lean-virtuals": "^0.9.0",
     "morgan": "~1.9.1",
@@ -34,8 +32,7 @@
     "prettier": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
-    "supertest": "^6.1.6",
-    "weak-napi": "^2.0.2"
+    "supertest": "^6.1.6"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.30",
@@ -62,9 +59,10 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
     "jest": "^27.3.1",
+    "mongodb-memory-server": "^8.0.3",
     "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "weak-napi": "^2.0.2"
   }
 }
