Refactor: () => void; 를 VoidFunction으로 변경

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -42,5 +42,8 @@
     "import/resolver": {
       "typescript": "./tsconfig.json"
     }
+  },
+  "globals": {
+    "VoidFunction": "readonly"
   }
 }
