--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "aws-sdk": "^2.1025.0",
     "axios": "^0.24.0",
     "chart.js": "^3.6.0",
-    "dompurify": "^2.3.3",
+    "isomorphic-dompurify": "^0.16.0",
     "nanoid": "^3.1.30",
     "next": "12.0.2",
     "next-images": "^1.8.2",
