--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register --delay 500ms ./src/bin/www.ts --watch",
     "pm2": "pm2 restart node_modules/.bin/ts-node -- -r tsconfig-paths/register ./src/bin/www.ts",
-    "test": "NODE_ENV=test node --expose-gc ./node_modules/jest/bin/jest.js --runInBand --logHeapUsage",
+    "test": "NODE_ENV=test jest",
     "test-coverage": "NODE_ENV=test node --expose-gc ./node_modules/jest/bin/jest.js --runInBand --logHeapUsage --coverage"
   },
   "dependencies": {
