--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@next/bundle-analyzer": "^12.0.4",
     "aws-sdk": "^2.1025.0",
     "axios": "^0.24.0",
     "chart.js": "^3.6.0",
