--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.0.1",
     "react-query": "^3.31.0",
+    "react-virtualized": "^9.22.3",
     "recoil": "^0.4.1"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@emotion/babel-plugin": "^11.3.0",
     "@types/dompurify": "^2.3.1",
     "@types/react": "17.0.33",
+    "@types/react-virtualized": "^9.21.15",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^7.32.0",
