--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
+    "react-loading-skeleton": "^3.0.1",
     "react-query": "^3.31.0",
     "recoil": "^0.4.1"
   },
