--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "start": "next start",
     "lint": "next lint",
     "pm2": "pm2 restart --name \"next\" -- start",
-    "postbuild": "next-sitemap --config sitemap.js"
+    "sitemap": "next-sitemap --config sitemap.js"
   },
   "dependencies": {
     "@emotion/css": "^11.5.0",
