Chore: github action workflow 에 backend test 실행 추가

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
       - name: ssh
         run: |
           cd ~/WEB26-COKIRI
+          git reset --hard HEAD
           git pull
           cd frontend
           npm install
@@ -25,7 +26,9 @@ jobs:
       - name: ssh
         run: |
           cd ~/WEB26-COKIRI
+          git reset --hard HEAD
           git pull
           cd backend
           npm install
+          npm run test
           npm run pm2
