chore: 의존성 업데이트 및 프로젝트 설정 소폭 변경

--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,4 +1,21 @@
 {
-  "presets": ["next/babel"],
-  "plugins": ["@babel/plugin-proposal-do-expressions", "@emotion/babel-plugin"]
+  "presets": [
+    [
+      "next/babel",
+      {
+        "preset-react": {
+          "runtime": "automatic",
+          "importSource": "@emotion/react"
+        }
+      }
+    ]
+  ],
+  "plugins": [
+    [
+      "@emotion/babel-plugin",
+      {
+        "ssr": true
+      }
+    ]
+  ]
 }
